fixed audio problems

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                 <h2 id="graveYardBox">GRAVEYARD</h2>
                 <div class="defeated"></div>
             </div>
+            <audio id="playerSounds"></audio>
+            <audio id="music"></audio>
         </div>
-        
     </div>
 </body>
 </html>
